# istore

./: .gitignore  Cargo.toml  README.md
database/migrations/: 20240222015413_user-table.up.sql
src/: error.rs  main.rs
src/context/: mod.rs
src/model/: base.rs  mod.rs  task.rs  user.rs
src/web/: api_routes.rs  login_routes.rs  middleware.rs  mod.rs
